<resources>
    <string name="app_name">MyRecyclerView</string>
    <string name="nama_pahlawan">Nama Pahlawan</string>
    <string name="detail_pahlawan">Detail</string>
    <string name="cardview">CardView</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="profile_pahlawan">profile pahlawan</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
</resources>
