<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:contentDescription="@string/profile_pahlawan"
            android:id="@+id/img_foto_pahlawan"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nama_pahlawan"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/img_foto_pahlawan"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/nama_pahlawan"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_detail_pahlawan"
            android:layout_above="@+id/layout_button"
            android:layout_below="@id/tv_nama_pahlawan"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/img_foto_pahlawan"
            android:layout_toRightOf="@+id/img_foto_pahlawan"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/detail_pahlawan"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_button"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@+id/img_foto_pahlawan"
            android:layout_toRightOf="@id/img_foto_pahlawan"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_set_fav"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1"
                android:text="@string/favourite"
                android:textSize="12sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1"
                android:text="@string/share"
                android:id="@+id/btn_set_share"
                android:textSize="12sp"/>

        </LinearLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>